--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "proxy": "http://localhost:3000/",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,7 +10,11 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "@types/styled-components-react-native": "^5.1.3",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
@@ -17,6 +22,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "styled-components": "^5.3.3"
   },
