--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
-    "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
+    "@types/styled-components-react-native": "^5.1.3",
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
   },
